made team block

--- a/src/sass/blocks/_button.sass
+++ b/src/sass/blocks/_button.sass
@@ -19,4 +19,7 @@
     &_gallery
         width: 370px
         margin-top: 25px
+    &_leader-card
+        width: 250px
+        margin-top: 35px
 
