--- a/src/sass/blocks/_header.sass
+++ b/src/sass/blocks/_header.sass
@@ -1,8 +1,11 @@
 .header
     background-color: #0B0B0B
     height: 90px
-    border-bottom-color: #fff
-    border-bottom: 2px
+    border-bottom: 2px solid #fff
+    position: fixed
+    top: 0
+    width: 100%
+    z-index: 1000
     &__menu
         display: flex
         align-items: center
