--- a/src/sass/blocks/_main.sass
+++ b/src/sass/blocks/_main.sass
@@ -1,4 +1,5 @@
 .main
+    margin-top: 90px
     min-height: 750px
     background: url('../img/main_bg.jpg') center center/cover no-repeat
     padding: 320px 0 50px 0
