--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -6,8 +6,11 @@
 .container
     width: 1440px
     margin: 0 auto
+    position: relative
 
 @import blocks/header
 @import blocks/main
 @import blocks/button
 @import blocks/gallery
+@import blocks/team
+@import blocks/leader-card
