--- a/src/sass/blocks/_button.sass
+++ b/src/sass/blocks/_button.sass
@@ -22,4 +22,14 @@
     &_leader-card
         width: 250px
         margin-top: 35px
+    &_card
+        background: none
+        border: 2px solid #fff
+        width: 200px
+        margin-top: 10px
+        &:hover
+            border: 2px solid $main-color
+            color: $main-color
+            background: none
+
 
