--- a/src/sass/blocks/_button.sass
+++ b/src/sass/blocks/_button.sass
@@ -31,5 +31,7 @@
             border: 2px solid $main-color
             color: $main-color
             background: none
+    &_form
+        margin: 0 auto
 
 
