--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -3,6 +3,9 @@
 *
     font-family: 'Montserrat', sans-serif
 
+body
+    background-color: #0b0b0b
+
 .container
     width: 1440px
     margin: 0 auto
@@ -16,3 +19,5 @@
 @import blocks/leader-card
 @import blocks/instafeed
 @import blocks/partner
+@import blocks/present
+@import blocks/map
