--- a/src/sass/blocks/_gallery.sass
+++ b/src/sass/blocks/_gallery.sass
@@ -1,6 +1,6 @@
 .gallery
     position: relative
-    min-height: 780px
+    min-height: 740px
     padding: 120px 0
     &:focus
         outline: none
@@ -24,6 +24,7 @@
         z-index: 100
     &__title
         font-size: 64px
+        line-height: 70px
         font-weight: 600
         color: $text-main-color
         text-transform: uppercase
