--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -15,6 +15,7 @@ body
 @import blocks/main
 @import blocks/button
 @import blocks/gallery
+@import blocks/services
 @import blocks/team
 @import blocks/leader-card
 @import blocks/instafeed
