--- a/src/sass/blocks/_button.sass
+++ b/src/sass/blocks/_button.sass
@@ -1,15 +1,20 @@
 .button
+    display: block
     height: 54px
     width: 240px
     border: none
     border-radius: 5px
     background-color: $main-color
+    font-family: Montserrat
     font-size: 18px
+    line-height: 54px
     color: $text-main-color
+    text-decoration: none
     text-align: center
     transition: 0.5s
     &:hover
         background-color: #da0083
+        color: $text-main-color
     &:focus
         outline: none
     &_main
@@ -33,5 +38,13 @@
             background: none
     &_form
         margin: 0 auto
+    &_price
+        width: 220px
+        margin-right: 30px
+    &_price-nobg
+        line-height: 50px
+        width: 225px
+        border: 2px solid $main-color
+        background: none
 
 
