--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -16,6 +16,7 @@ body
 @import blocks/button
 @import blocks/gallery
 @import blocks/services
+@import blocks/price
 @import blocks/team
 @import blocks/leader-card
 @import blocks/instafeed
