--- a/src/sass/blocks/_services.sass
+++ b/src/sass/blocks/_services.sass
@@ -1,5 +1,8 @@
 .services
     padding: 120px 0 120px 0
+    display: flex
+    justify-content: flex-start
+    flex-wrap: wrap
     &__title
         font-weight: 600
         font-size: 56px
@@ -40,7 +43,7 @@
                 color: $main-color
     &__img
         position: absolute
-        width: 357px
+        width: 358px
         height: 238px
         left: 50%
         transform: translateX(-50%)
