--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -23,3 +23,10 @@ body
 @import blocks/partner
 @import blocks/present
 @import blocks/map
+@import blocks/footer
+
+@media ( max-width: 1140px )
+    .container
+        width: 1140px
+        margin: 0 auto
+    
